[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -44.0
margin_right = 68.0
margin_bottom = -10.0
size_flags_vertical = 0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -1.85495
margin_right = 68.0
margin_bottom = 33.1451
size_flags_vertical = 0
text = "Leave Area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.44351
margin_right = -2.44351
color = Color( 0, 0, 0, 0.345098 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="CanvasLayer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="CanvasLayer/Button2" to="." method="_on_Button2_button_up"]
